@@ -98,6 +98,9 @@ public final class EnterHandler {
 		c.getPlayer().showNote();*/
 		gc.getSession().send(writeKeymap(player.getKeyMap()));
 		gc.getSession().send(writeMacros(player.getMacros()));
+		String serverMessage = GameServer.getVariables().getNewsTickerMessage();
+		if (!serverMessage.isEmpty())
+			gc.getSession().send(GamePackets.writeServerMessage(ChatHandler.TextStyle.TICKER.byteValue(), serverMessage, (byte) -1, true));
 
 		/*player.checkMessenger();
 		player.checkBerserk();
